--- a/index.html
+++ b/index.html
@@ -18,20 +18,17 @@ href="index.css">
 href="/assets/plugins/scroll-bar/jquery.mCustomScrollbar.css"
 rel="stylesheet" />
 
-<link
-href="/as"
-rel="stylesheet" />
 
 <!-- Horizontal-menu css -->
 <link
-th:href="/assets/plugins/horizontal-menu/dropdown-effects/fade-down.css"
+href="/assets/plugins/horizontal-menu/dropdown-effects/fade-down.css"
 rel="stylesheet">
-<link th:href="/assets/plugins/horizontal-menu/horizontalmenu.css"
+<link href="/assets/plugins/horizontal-menu/horizontalmenu.css"
 rel="stylesheet">
 
 <!--Daterangepicker css-->
 <link
-th:href="/assets/plugins/bootstrap-daterangepicker/daterangepicker.css"
+href="/assets/plugins/bootstrap-daterangepicker/daterangepicker.css"
 rel="stylesheet" />
 
 <!-- Sidebar Accordions css -->
